manifests/app-ns-default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp-client
  template:
    metadata:
      labels:
        app: smtp-client
    spec:
      containers:
      - name: client
        image: gersontpc/smtp-client:latest
        resources:
          requests:
            cpu: "10m"
            memory: "16Mi"
          limits:
            cpu: "50m"
            memory: "32Mi"
