manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp-relay
  labels:
    app: smtp-relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp-relay
  template:
    metadata:
      labels:
        app: smtp-relay
    spec:
      containers:
        - name: smtp-relay
          image: gersontpc/smtp-relay:latest  # ajuste para o seu repositório
          ports:
            - containerPort: 25
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          # recursos e segurança adicionais podem ser definidos aqui
