manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp-relay
  labels:
    app: smtp-relay
spec:
  selector:
    app: smtp-relay
  ports:
    - protocol: TCP
      port: 25
      targetPort: 25
  type: ClusterIP
